--- a/package.json
+++ b/package.json
@@ -5,8 +5,26 @@
   "main": "api/index.ts",
   "author": "",
   "license": "MIT",
-  "devDependencies": {
-    "@types/node": "^14.14.7",
+  "scripts": {
+    "lint": "eslint ."
+  },
+  "dependencies": {
     "@vercel/node": "^1.9.0"
+  },
+  "devDependencies": {
+    "@samtgarson/eslint-config": "^2.3.1",
+    "@types/node": "^14.14.7",
+    "@typescript-eslint/eslint-plugin": "^4.14.2",
+    "@typescript-eslint/parser": "^4.14.2",
+    "eslint": "^7.19.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-promise": "^4.2.1",
+    "typescript": "^4.1.3"
+  },
+  "eslintConfig": {
+    "extends": [
+      "@samtgarson/eslint-config",
+      "@samtgarson/eslint-config/typescript"
+    ]
   }
 }
