--- a/package.json
+++ b/package.json
@@ -6,19 +6,23 @@
   "author": "",
   "license": "MIT",
   "scripts": {
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "test": "jest"
   },
   "dependencies": {
     "@vercel/node": "^1.9.0"
   },
   "devDependencies": {
     "@samtgarson/eslint-config": "^2.3.1",
+    "@types/jest": "^26.0.20",
     "@types/node": "^14.14.7",
     "@typescript-eslint/eslint-plugin": "^4.14.2",
     "@typescript-eslint/parser": "^4.14.2",
     "eslint": "^7.19.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-promise": "^4.2.1",
+    "jest": "^26.6.3",
+    "ts-jest": "^26.5.0",
     "typescript": "^4.1.3"
   },
   "eslintConfig": {
@@ -26,5 +30,11 @@
       "@samtgarson/eslint-config",
       "@samtgarson/eslint-config/typescript"
     ]
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "moduleNameMapper": {
+      "@/(.*)": "<rootDir>/$1"
+    }
   }
 }
