--- a/package.json
+++ b/package.json
@@ -18,10 +18,14 @@
     "@types/node": "^14.14.7",
     "@typescript-eslint/eslint-plugin": "^4.14.2",
     "@typescript-eslint/parser": "^4.14.2",
+    "chalk": "^4.1.0",
     "eslint": "^7.19.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-promise": "^4.2.1",
     "jest": "^26.6.3",
+    "jsome": "^2.5.0",
+    "pretty-error": "^3.0.3",
+    "string-length": "^4.0.1",
     "ts-jest": "^26.5.0",
     "typescript": "^4.1.3"
   },
